--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Jeremie's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/jjanoir/resume/raw/main/Profile.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://github.com/jjanoir/resume/raw/main/Profile.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
